fixed some spacing

--- a/kycsite/source/stylesheets/_partials/_tours.css.scss
+++ b/kycsite/source/stylesheets/_partials/_tours.css.scss
@@ -49,7 +49,7 @@
 }
 
 .diy{
-	height:500px;
+	height:100%;
 }
 
 .bullets{
@@ -108,5 +108,5 @@
 
 
 .video {
-	margin-top: -100px;
+	
 }
